# avarice

./: .clang-format  .gitignore  AUTHORS  Bootstrap  CMakeLists.txt  ChangeLog  INSTALL-FROM-CVS  NEWS  README.md  avarice.spec.in  configure.ac  configure.in
.github/workflows/: build.yml
avarice/: AUTHORS  Bootstrap  ChangeLog  INSTALL  INSTALL-FROM-CVS  Makefile.am  NEWS  avarice.spec.in  configure.ac  configure.in
avarice/doc/: Makefile.am  avarice.1  avrIceProtocol.txt  dev_desc.txt  install.txt  mk2-protocol.txt  todo.txt
avarice/scripts/: gdb-avarice-script  ice-gdb.in  start-avarice
avarice/src/: Makefile.am  avarice.h  crc16.c  devdescr.cc  gnu_getopt.h  ioreg.cc  ioreg.h  jtag.h  jtag1.h  jtag2.h  jtag2bp.cc  jtag2io.cc  jtag2prog.cc  jtag2run.cc  jtag2rw.cc  jtag2usb.cc  jtagbp.cc  jtaggeneric.cc  jtagio.cc  jtagprog.cc  jtagrun.cc  jtagrw.cc  main.cc  remote.cc  utils.cc
avarice/tools/: devdescr.xsl
cmake/: FindLibUSB.cmake
doc/: Makefile.am  README.cygwin  avarice.1  dev_desc.txt  ice-gdb.1  kill-avarice.1  mk2-protocol.txt  running.txt  start-avarice.1  todo.txt
scripts/: Makefile.am  io_gen.py  start-avarice
src/: Makefile.am  avarice.h  configure.in  crc16.cpp  crc16.h  devdescr.cc  devdescr.cpp  gdb_server.cpp  gdb_server.h  gnu_getopt.c  gnu_getopt1.c  ioreg.cc  ioreg.h  jtag.cpp  jtag.h  jtag1.h  jtag1bp.cc  jtag1bp.cpp  jtag1io.cc  jtag1io.cpp  jtag1misc.cc  jtag1misc.cpp  jtag1prog.cc  jtag1prog.cpp  jtag1run.cc  jtag1run.cpp  jtag1rw.cc  jtag1rw.cpp  jtag2.h  jtag2_defs.h  jtag2bp.cc  jtag2bp.cpp  jtag2io.cc  jtag2io.cpp  jtag2misc.cc  jtag2misc.cpp  jtag2prog.cc  jtag2prog.cpp  jtag2run.cc  jtag2run.cpp  (+29 more)
src/devices/: at90can128.cpp  at90can32.cpp  at90can64.cpp  at90pwm2.cpp  at90pwm216.cpp  at90pwm2b.cpp  at90pwm3.cpp  at90pwm316.cpp  at90pwm3b.cpp  at90usb1287.cpp  at90usb162.cpp  at90usb646.cpp  at90usb647.cpp  atmega128.cpp  atmega1280.cpp  atmega1281.cpp  atmega1284p.cpp  atmega128rfa1.cpp  atmega16.cpp  atmega162.cpp  atmega164p.cpp  atmega165.cpp  atmega165p.cpp  atmega168.cpp  atmega168p.cpp  atmega169.cpp  atmega16hva.cpp  atmega16m1.cpp  atmega2560.cpp  atmega2561.cpp  atmega32.cpp  atmega323.cpp  atmega324p.cpp  atmega325.cpp  atmega3250.cpp  atmega3250p.cpp  atmega325p.cpp  atmega328p.cpp  atmega329.cpp  atmega3290.cpp  (+53 more)
tools/: devdescr.xsl  edbg.lua  ocdrev.xsl  pdml.xsl
