#
#	avarice - The "avarice" program.
#	Copyright (C) 2001 Scott Finneran
#      Copyright (C) 2002 Intel Corporation
#
#	This program is free software; you can redistribute it and/or modify
#	it under the terms of the GNU General Public License Version 2
#       as published by the Free Software Foundation.
#
#	This program is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#	GNU General Public License for more details.
#
#	You should have received a copy of the GNU General Public License
#	along with this program; if not, write to the Free Software
#	Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111, USA.
#
#
m4_define([AVARICE_VER],[2.0.20030327cvs])

AC_INIT(avarice, AVARICE_VER)
AC_CONFIG_AUX_DIR(config-aux)
AC_CONFIG_SRCDIR(src/main.cc)
AC_CONFIG_HEADER(src/autoconf.h)

AM_INIT_AUTOMAKE(avarice, AVARICE_VER)

AC_PATH_PROG(pathperl, perl)
if test -z "$pathperl" ; then
  AC_MSG_ERROR(I can't find perl); 
fi

AC_PROG_CXX

AC_OUTPUT(
	scripts/Makefile
	scripts/ice-gdb
	src/Makefile
	Makefile
)
