#
#	avarice - The "avarice" program.
#	Copyright (C) 2001 Scott Finneran
#      Copyright (C) 2002 Intel Corporation
#	Copyright (C) 2005 Joerg Wunsch
#
#	This program is free software; you can redistribute it and/or modify
#	it under the terms of the GNU General Public License Version 2
#       as published by the Free Software Foundation.
#
#	This program is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#	GNU General Public License for more details.
#
#	You should have received a copy of the GNU General Public License
#	along with this program; if not, write to the Free Software
#	Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111, USA.
#
#
# $Id$
AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = avarice

avarice_SOURCES =	\
	avarice.h	\
	crc16.h		\
	crc16.c		\
	devdescr.cc	\
	ioreg.cc	\
	ioreg.h		\
	jtag.h		\
	jtag1.h		\
	jtag2.h		\
	jtag2bp.cc	\
	jtag2io.cc	\
	jtag2misc.cc	\
	jtag2prog.cc	\
	jtag2run.cc	\
	jtag2rw.cc	\
	jtag2_defs.h	\
	jtagbp.cc	\
	jtaggeneric.cc	\
	jtagio.cc	\
	jtagmisc.cc	\
	jtagprog.cc	\
	jtagrun.cc	\
	jtagrw.cc	\
	main.cc		\
	remote.cc	\
	remote.h	\
	utils.cc        \
	gnu_getopt.c    \
	gnu_getopt.h    \
	gnu_getopt1.c
