#
#	avarice - The "avarice" program.
#	Copyright (C) 2001 Scott Finneran
#      Copyright (C) 2002 Intel Corporation
#	Copyright (C) 2005 Joerg Wunsch
#
#	This program is free software; you can redistribute it and/or modify
#	it under the terms of the GNU General Public License Version 2
#       as published by the Free Software Foundation.
#
#	This program is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#	GNU General Public License for more details.
#
#	You should have received a copy of the GNU General Public License
#	along with this program; if not, write to the Free Software
#	Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111, USA.
#
#
AUTOMAKE_OPTIONS = foreign subdir-objects

bin_PROGRAMS = avarice

avarice_SOURCES =	\
	avarice.h	\
	crc16.h		\
	crc16.c		\
	devdescr.cc	\
	jtag.h		\
        jtag.cpp        \
	jtag1.h		\
	jtag2.h		\
	jtag3.h		\
	jtag2bp.cc	\
	jtag2io.cc	\
	jtag2misc.cc	\
	jtag2prog.cc	\
	jtag2run.cc	\
	jtag2rw.cc	\
	jtag2_defs.h	\
	jtag2usb.cc	\
	jtag3bp.cc	\
	jtag3io.cc	\
	jtag3misc.cc	\
	jtag3prog.cc	\
	jtag3run.cc	\
	jtag3rw.cc	\
	jtag1bp.cc	\
	jtag1io.cc	\
	jtag1misc.cc	\
	jtag1prog.cc	\
	jtag1run.cc	\
	jtag1rw.cc	\
	main.cc		\
	pragma.h	\
	remote.cc	\
	remote.h	\
	utils.cc        \
	gnu_getopt.c    \
	gnu_getopt.h    \
	gnu_getopt1.c   \
        devices/atmega16.cpp     \
        devices/atmega162.cpp    \
        devices/atmega169.cpp    \
        devices/atmega323.cpp    \
        devices/atmega32.cpp     \
        devices/atmega128.cpp    \
        devices/atmega64.cpp     \
        devices/at90can128.cpp   \
        devices/atmega164p.cpp   \
        devices/atmega324p.cpp   \
        devices/atmega644.cpp    \
        devices/atmega325.cpp    \
        devices/atmega3250.cpp   \
        devices/atmega645.cpp    \
        devices/atmega6450.cpp   \
        devices/atmega329.cpp    \
        devices/atmega3290.cpp   \
        devices/atmega649.cpp    \
        devices/atmega6490.cpp   \
        devices/atmega640.cpp    \
        devices/atmega1280.cpp   \
        devices/atmega1281.cpp   \
        devices/atmega2560.cpp   \
        devices/atmega2561.cpp   \
        devices/atmega48.cpp     \
        devices/atmega88.cpp     \
        devices/atmega168.cpp    \
        devices/attiny13.cpp     \
        devices/attiny2313.cpp   \
        devices/attiny4313.cpp   \
        devices/at90pwm2.cpp     \
        devices/at90pwm3.cpp     \
        devices/at90pwm2b.cpp    \
        devices/at90pwm3b.cpp    \
        devices/atmega16m1.cpp   \
        devices/atmega32m1.cpp   \
        devices/atmega64m1.cpp   \
        devices/atmega32c1.cpp   \
        devices/atmega64c1.cpp   \
        devices/attiny24.cpp     \
        devices/attiny44.cpp     \
        devices/attiny84.cpp     \
        devices/attiny25.cpp     \
        devices/attiny45.cpp     \
        devices/attiny85.cpp     \
        devices/attiny261.cpp    \
        devices/attiny461.cpp    \
        devices/attiny861.cpp    \
        devices/at90can32.cpp    \
        devices/at90can64.cpp    \
        devices/at90pwm216.cpp   \
        devices/at90pwm316.cpp   \
        devices/at90usb1287.cpp  \
        devices/at90usb162.cpp   \
        devices/at90usb646.cpp   \
        devices/at90usb647.cpp   \
        devices/atmega1284p.cpp  \
        devices/atmega165.cpp    \
        devices/atmega165p.cpp   \
        devices/atmega168p.cpp   \
        devices/atmega16hva.cpp  \
        devices/atmega3250p.cpp  \
        devices/atmega325p.cpp   \
        devices/atmega328p.cpp   \
        devices/atmega3290p.cpp  \
        devices/atmega329p.cpp   \
        devices/atmega32hvb.cpp  \
        devices/atmega32u4.cpp   \
        devices/atmega406.cpp    \
        devices/atmega48p.cpp    \
        devices/atmega644p.cpp   \
        devices/atmega88p.cpp    \
        devices/attiny167.cpp    \
        devices/attiny43u.cpp    \
        devices/attiny48.cpp     \
        devices/attiny88.cpp     \
        devices/atxmega128a1.cpp \
        devices/atmega128rfa1.cpp \
        devices/atmega_rfr2.cpp \
        devices/atxmega8e5.cpp    \
        devices/atxmega192a3.cpp  \
        devices/atxmega256a3.cpp  \
        devices/atxmega32a4.cpp   \
        devices/atxmega128a3.cpp  \
        devices/atxmega16d4.cpp   \
        devices/atxmega128b1.cpp  \
        devices/atxmega128b3.cpp  \
        devices/atxmega64b1.cpp   \
        devices/atxmega64b3.cpp   \
        devices/atxmega64a3.cpp   \
        devices/atxmega32e5.cpp
